[project]
name = "enpkg_full"
version = "0.0.1"
description = "ENPKG FULL"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Pierre-Marie Allard", email = "pierre-marie.allard@unifr.ch"},
]
dependencies = [
    "bokeh>=2.4.3,<3.0.0",
    "chembl-webresource-client>=0.10.8,<0.11.0",
    "compress-json>=1.0.10,<2.0.0",
    "datatable>=1.0.0,<2.0.0",
    "downloaders>=1.0.20,<2.0.0",
    "gitpython>=3.1.41,<4.0.0",
    "ipykernel>=6.28.0,<7.0.0",
    "ipython>=8.10.0,<9.0.0",
    "matchms>=0.20.0,<0.21.0",
    "matplotlib>=3.8.2,<4.0.0",
    "memo-ms>=0.1.4,<0.2.0",
    "numba>=0.58.1,<0.59.0",
    "networkx>=3.2.1,<4.0.0",
    "numpy>=1.24.0,<2.0.0",
    "opentree>=1.0.1,<2.0.0",
    "pandas>=2.0.3,<3.0.0",
    "plotly>=5.18.0,<6.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "rdflib>=7.0.0,<8.0.0",
    "rdkit>=2023.9.4,<2024.0.0",
    "requests>=2.31.0,<3.0.0",
    "scikit-bio>=0.5.9,<0.6.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "seaborn>=0.13.1,<0.14.0",
    "spec2vec>=0.8.0,<0.9.0",
    "tqdm>=4.66.1,<5.0.0",
    "userinput>=1.0.22,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/enpkg/enpkg_full"
Documentation = "https://github.com/enpkg/enpkg_full"
Repository = "https://github.com/enpkg/enpkg_full"

[project.scripts]
start = "app:main"

[dependency-groups]
dev = [
    "black>=23.12.1,<24.0.0",
    "coverage>=7.4.0,<8.0.0",
    "isort>=5.13.2,<6.0.0",
    "pytest>=7.4.4,<8.0.0",
    "pytest-asyncio>=0.23.2,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock",
    "pytest-xdist>=3.5.0,<4.0.0",
    "requests-mock",
    "tox>=4.12.0,<5.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["zen", "zen_notebook", "zenodo_pusher", "zenodo_update_record", "zenodo_upload"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The module rdkit.Chem.MolStandardize:DeprecationWarning",
]
testpaths = "tests"

[tool.isort]
profile = "black"
